--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "h2h-fe",
   "version": "0.1.0",
-  "private": false,
+  "private": false,,
   "homepage": "https://kafasan.github.io/h2h",
   "devDependencies": {
     "cross-env": "^5.1.4",
